Fix modal button alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,8 +202,8 @@ a:active {
 	width: 100vw;
 }
 .bg-modal {
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 	background-color: rgba(0, 0, 0, 0.7);
 	position: fixed;
 	top: 0;
@@ -215,16 +215,24 @@ a:active {
 .modal-content {
 	width: 500px;
 	height: 300px;
-	background-color: white;
+	background-color: #e0e0e0;
 	opacity: 1;
 	border-radius: 4px;
 	text-align: center;
 	padding: 20px;
 	position: relative;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
 }
 img {
 	width: 100px;
 }
+.modal-content img {
+	flex: 1;
+}
+
 .close {
 	position: absolute;
 	top: 0;
@@ -233,19 +241,35 @@ img {
 	transform: rotate(45deg);
 	cursor: pointer;
 }
+
+form {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 input {
-	width: 50%;
+	flex: 1;
+	width: 200px;
 	display: block;
-	margin: 15px auto;
+	background-color: #ebbd28;
+	border-radius: 5px;
+	border: 1px solid black;
+	padding: 2px;
+	text-align: center;
 }
 .btn {
-	width: 100px;
-	height: 20px;
-	padding: 14px 40px;
-	background-color: rgb(38, 99, 156);
-	border-radius: 10rem;
-	color: white;
+	flex: 1;
+	padding: 7px 5px 5px 5px;
+	margin: 10px 0;
+	line-height: 1.9;
+	background-color: #ebbd28;
+	border-radius: 8px;
+	border: 1px solid white;
+	color: black;
 	cursor: pointer;
+	font-size: 12px;
 }
 .btn:hover {
 	transform: scale(0.98);
